--- a/cuny_605_wk_13_HW.Rmd
+++ b/cuny_605_wk_13_HW.Rmd
@@ -1,15 +1,70 @@
-#4
+---
+title: "CUNY 605"
+subtitle: "Week 13 HW Assignment"
+author: "mehtablocker"
+date: "`r format(Sys.Date(), '%B %d, %Y')`"
+output:
+  html_document:
+    toc: true
+    toc_float: true
+---
 
+<style type="text/css">
+h3 {
+  color: DarkBlue;
+}
+</style>
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+
+```
+
+###1. Integration by substitution
+
+$$ \int 4 e^{-7 x} d x $$
+u = -7x  
+du/dx = -7  
+du = -7 dx  
+$$ = \int \frac{-4}{7} d u e^u $$
+$$ = \frac{-4}{7} \int e^u d u $$
+$$ = \frac{-4}{7} e^u + C $$
+$$ = \frac{-4}{7} e^{-7x} + C $$
+
+###2. Integration of 1/x
+
+$$ \int -\frac{3150}{t^4} - 220 $$
+$$ = \int -3150 t^{-4} - 220 $$
+$$ = -3150 \frac{t^{-3}}{-3} - 220 t + C = 6530 $$
+$$ = 1050 t^{-3} - 220 t + 5700 $$
+
+###3. Area of rectangles
+
+1 + 3 + 5 + 7 = __16__
+
+###4. Area between functions
+
+```{r ex_4}
 curve(x^2 - 2*x - 2, -5, 5)
 curve(x + 2, -5, 5, add=T, col="red")
+```
 
-# set the equations equal to each other to see where they intersect
+Set the equations equal to each other to calculate where they intersect.
 
-x^2 - 2*x - 2 = x + 2
-x^2 - 3*x - 4 = 0
-(x-4)*(x+1) = 0
-(4, -1)
+x^2 - 2*x - 2 = x + 2  
+x^2 - 3*x - 4 = 0  
+(x-4)*(x+1) = 0  
+x = (4, -1)  
 
-integral (-1 to 4) of:  - x^2 + 3*x + 4
-x^3/3 + 3x^2/2 + 4x + C
-4^3/3 + 3*4^2/2 + 4*4 - ((-1)^3/3 + 3*(-1)^2/2 + 4*(-1))
+$$ \int_{-1}^4 (x + 2) - (x^2 - 2x -2) $$
+$$ = \int  -x^2 + 3x + 4 $$
+
+$$ = \frac{x^3}{3} + \frac{3 x^2}{2} + 4 x + C $$
+Plugging in 4 and -1 and subtracting:
+
+4^3/3 + 3\*4^2/2 + 4\*4 - ((-1)^3/3 + 3\*(-1)^2/2 + 4\*(-1)) = __`r 4^3/3 + 3*4^2/2 + 4*4 - ((-1)^3/3 + 3*(-1)^2/2 + 4*(-1))`__
+
+###5. Business example
+
+Unless there is information missing (no price or demand curve formula is given), selling all 110 irons in one order would minimize costs.
+
